--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,29 +23,41 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    // dataBinding配置
+    dataBinding {
+        enabled true
+    }
 }
 
 dependencies {
-    compile 'com.jakewharton:butterknife:8.2.1'
-    apt 'com.jakewharton:butterknife-compiler:8.2.1'
-    compile 'com.google.code.gson:gson:2.7'
-    compile 'de.hdodenhof:circleimageview:2.0.0'
-
-
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
-    compile project(':douyalibrary')
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:design:24.2.0'
     compile 'com.android.support:recyclerview-v7:24.2.0'
     compile 'com.android.support:cardview-v7:24.2.0'
 
+    // rxjava
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.2.1'
+    // retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    // gson
+    compile 'com.google.code.gson:gson:2.7'
+    // butterknife
+    compile 'com.jakewharton:butterknife:8.4.0'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    // glide
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    // circleimageview
+    compile 'de.hdodenhof:circleimageview:2.0.0'
+    // systembartint
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
+    // statusbaruitl
     compile 'com.jaeger.statusbaruitl:library:1.2.7'
+
+    compile project(':douyalibrary')
 }
